<resources>
    <string name="app_name">Poultry Managment System</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">New Activity</string>
    <string name="title_activity_main_layout">Poultry Management System</string>
    <string name="buisnessadvice">Business Advice</string>
    <string name="reportPrb">Report Problem</string>
    <string name="legalaspect">Legal Aspect</string>
    <string name="feeds">Feeds</string>
    <string name="buyorsell">Buy Or Sale</string>
    <string name="title_activity_buisness">Business</string>
    <string name="title_activity_feeds">Feeds</string>
    <string name="title_activity_lagal">Legal Aspects</string>
    <string name="title_activity_problem">Problem</string>
    <string name="title_activity_buisness_result">Business Result</string>
    <string name="urban">Wild chickens will run around as as they wish and roost up in trees, under bushes, or just sitting on the ground. While you could just throw your domesticated chickens in your back yard and let them figure it out for themselves, it’s doubtful your neighbors, the city, or your conscience would be happy (although predators would be). Fortunately, meeting your chickens’ habitat and shelter needs isn’t that difficult.Behold the Chicken Coop!</string>
    <string name="rural">A coalition of 26 groups and 17 individuals today urged the Department of Agriculture to withdraw a proposal that increases poultry processing line speeds and removes hundreds of federal inspectors from poultry processing plants.</string>
    <string name="title_activity_place_order">Place Order</string>
    <string name="value">Quantity</string>
    <string name="Medic">Medical +Welfare</string>
    <string name="title_activity_medical_welfare">Medical Welfare</string>
</resources>
